--- a/src/index.css
+++ b/src/index.css
@@ -1031,13 +1031,20 @@ textarea {
     height             : inherit;
 }
 
-<<<<<<< HEAD
-=======
 .Errored{
     color: red;
     font-size: 10px
 }
->>>>>>> c99f1db959aca52a3fad4718e17ce07404c0e1fe
+.ratting-document-btn button{
+    background-color: rgb(122, 172, 179) !important;
+    color: white !important;
+    text-align: center;
+    border: solid 1px rgb(122,172,179);
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+    height: 40px;
+}
 /*Rating Star*/
 
 .rating-wrapper .rating-label {
